--- a/README.org
+++ b/README.org
@@ -25,7 +25,7 @@ This defines a system configuration called ~computer1~, this configuration can b
 $ sudo nixos-rebuild switch --flake path/to/flake#computer1
 #+end_src
 
-flake.nix / default.nix / configuration.nix
+-> ./flake.nix
 #+begin_src nix
 {
     description = "Simple nixOS flake";
@@ -59,7 +59,7 @@ flake.nix / default.nix / configuration.nix
 }
 #+end_src
 
--> /hosts/computer1/default.nix
+-> ./hosts/computer1/default.nix
 #+begin_src nix
 {
     imports = [
@@ -69,7 +69,7 @@ flake.nix / default.nix / configuration.nix
 }
 #+end_src
 
--> /hosts/computer1/configuration.nix:
+-> ./hosts/computer1/configuration.nix:
 #+begin_src nix
 { config, pkgs, hostname, ... }: {
 
