--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-** NOTICE: THIS REPO IS ON-HOLD FOR NOW WHILE I DO OTHER STUFF
+** NOTICE: THIS REPO IS ON-HOLD FOR NOW WHILE I FOCUS ON OTHER STUFF
 
 ** Resources
 > [[https://discourse.nixos.org/t/proper-way-to-build-a-remote-system-with-flakes/17661][Proper way to build a remote system with flakes - discourse.nixos.org]]
